syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/proto";

package proto;

service SuperNode {
    rpc RegisterArtowrk(stream SuperNodeRegisterArtworkRequest) returns (stream SuperNodeRegisterArtworkReply);
}

message SuperNodeRegisterArtworkRequest {
    message HelloRequest {
        string connID = 1;
        string secondary_node_key = 2;
    }

    oneof test_oneof {
        HelloRequest hello = 1;
    }
}

message SuperNodeRegisterArtworkReply {
    message Error {
        enum Status {
            OK = 0;
            ERR = 1;
        }
        Status status = 1;
        string errMsg = 2;
    }
    message HelloReply {
        Error error = 1;
    }

    oneof test_oneof {
        HelloReply hello = 1;
    }
}




